<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techease.salonidm.ui.fragments.BusinessInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/merchant_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/merchant_name"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/merchant_email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/merchant_email"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/salon_name"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/salon_name"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_weight="1"
            android:text="@string/phone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/saloon_phone"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/website"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/website"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/address"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/address"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/city"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/city"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/state"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/state"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/licensed_number"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="15dp"
            android:layout_weight="1"
            android:foregroundGravity="right"
            android:id="@+id/licensed_number"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#595959"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:text="@string/edit"
        android:layout_gravity="bottom"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:id="@+id/edit_info"
        />

</LinearLayout>
